--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="http://s.thsi.cn/js/datav/charts/0.4.9/d3_charts.js"></script>
   </body>
 </html>
